[gd_scene load_steps=7 format=2]

[ext_resource path="res://Game.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/Fonts/Orbitron Bold.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://unlimited.gd" type="Script" id=5]

[sub_resource type="DynamicFont" id=1]
size = 40
font_data = ExtResource( 3 )

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("BalloonSpawn:wait_time")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 10.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("BirdSpawn:wait_time")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 10.0 ]
}

[sub_resource type="Animation" id=2]
resource_name = "spawn"
length = 90.0
step = 1.0
tracks/0/type = "value"
tracks/0/path = NodePath("BalloonSpawn:balloon_wait_time")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 31 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 10.0, 5.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("BirdSpawn:wait_time")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 21 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 20.0, 10.0 ]
}

[node name="Root" instance=ExtResource( 1 )]
script = ExtResource( 5 )

[node name="Score" type="Label" parent="." index="1"]
margin_left = 66.0
margin_right = 256.0
margin_bottom = 40.0
custom_fonts/font = SubResource( 1 )
text = "Score: 0"

[node name="BalloonSpawn" type="Timer" parent="." index="4"]
wait_time = 10.0
autostart = true

[node name="BirdSpawn" type="Timer" parent="." index="5"]
wait_time = 10.0
autostart = true

[node name="HighScore" type="Label" parent="GameOver/VBoxContainer" index="1"]
margin_right = 40.0
margin_bottom = 14.0

[node name="SpawnControl" type="AnimationPlayer" parent="." index="7"]
anims/RESET = SubResource( 3 )
anims/spawn = SubResource( 2 )

[connection signal="timeout" from="BalloonSpawn" to="." method="_on_BalloonSpawn_timeout"]
[connection signal="timeout" from="BirdSpawn" to="." method="_on_BirdSpawn_timeout"]
